--- a/Packs/GenericSQL/Integrations/GenericSQL/GenericSQL.yml
+++ b/Packs/GenericSQL/Integrations/GenericSQL/GenericSQL.yml
@@ -12,6 +12,7 @@ configuration:
   - PostgreSQL
   - Microsoft SQL Server
   - Oracle
+  - Microsoft SQL Server - MS ODBC Driver
   required: true
   type: 15
 - display: Database host
@@ -171,7 +172,7 @@ script:
     description: Running a sql query
     execution: false
     name: sql-command
-  dockerimage: demisto/genericsql:1.1.0.13618
+  dockerimage: devdemisto/genericsql:1.1.0.16129
   feed: false
   isfetch: false
   longRunning: false
